--- a/windows95.html
+++ b/windows95.html
@@ -76,15 +76,17 @@ Das hat Monate gedauert. Was heute trivial wäre - Meldung per Internet Web-Port
 <p>Ich also rein, an einer Art Hintertür mit Techniker-Empfang habe ich nach meinem Ansprechpartner gefragt. Der wollte mich umgehend nach Hause schicken. Er hätte keinen Platz. Sie wären komplett Land unter. Das geht nicht. Keine Zeit! Er hätte doch gesagt, dass das nicht mehr geht. Ich entgegne, dass ich hier nicht weggehen würde. Ich sei ja schließlich angekündigt. Und meine PCs seien ja schon vor Ort.</p>
 <p>Ich war nicht angekündigt. Meine PCs waren nicht vor Ort. Was ich nicht wusste: Microsoft USA hatte ein Stopp für alle europäischen Hersteller ausgegeben. Microsoft Deutschland hat mich ins Verderben geschickt. Ich wusste genau, wenn ich jetzt gehe, kriege ich keine Zertifizierung, wir würden nicht bei Marktstart dabei sein. Geht ja gar nicht. Am Ende hat der Mensch nachgegeben, mich reingelassen. Und tatsächlich nach meinen 2 PCs gefahndet. Die hingen noch beim Zoll. Also auslösen und liefern lassen. Nächster Tag frühestens. Ich bekam ein kleines Einzelbüro mit nacktem Tisch, Stuhl und Telefon und - nix. Maus, Tastatur und Monitor durfte ich im nahen Microsoft Shop kaufen. Immerhin durfte ich Kaffee und Snacks umsonst in der Kaffeeküche nehmen. Eine neue Erfahrung, dass Getränke in der Firma kostenlos sind.</p>
 <p>Am nächsten Tag trafen die PCs ein. Von da an dreimal täglich diese Prodzedur:
-- neue Windows 95 CD mit allerneuestem Release erhalten
-- Windows auf meinen 2 Rechnern installieren
-- Fehler notieren
-- Fehler an meine Firma in Paderborn schicken: 8h vor meiner Zeit, die waren also schon im Feierabend
-- Fehler an den BIOS-Hersteller in Taiwan schicken (per COMPUNET oder per Lotus Notes): 8h hinter mir, die konnten dann zu Arbeitsbeginn mit meinen Informationen loslegen
-- Warten bis Paderborn erste Rückmeldung gab
-- BIOS download per COMPUNET
-- BIOS flashen
-- Windows installieren</p>
+<ul>
+  <li>neue Windows 95 CD mit allerneuestem Release erhalten</li>
+  <li>Windows auf meinen 2 Rechnern installieren</li>
+  <li>Fehler notieren</li>
+  <li>Fehler an meine Firma in Paderborn schicken: 8h vor meiner Zeit, die waren also schon im Feierabend</li>
+  <li>Fehler an den BIOS-Hersteller in Taiwan schicken (per COMPUNET oder per Lotus Notes): 8h hinter mir, die konnten dann zu Arbeitsbeginn mit meinen Informationen loslegen</li>
+  <li>Warten bis Paderborn erste Rückmeldung gab</li>
+  <li>BIOS download per COMPUNET</li>
+  <li>BIOS flashen</li>
+  <li>Windows installieren</li>
+</ul>
 <p>Mit Glück hatte Taiwan dann den Fehler zu meinem nächsten Arbeitstag behoben und den Kollegen in Paderborn geschickt. Die haben getestet und mir das Ergebnis vor deren Feierabend zugeschickt, also mit mir um 6.00h morgens telefoniert. Und mögliche Lösungen beschrieben. Weltumspannend. Ohne Internet.</p>
 <p>Irgendwann ist das BIOS, bzw. der Flash-Baustein, kaputt gegangen. Ich musste einen EPROM-Brenner und EPROMS kaufen gehen. Das war damals auch nicht mehr so der Standard. Erstmal einen Laden in Seattle finden. Mit den Yellow Pages in der Hand durch die Gegend gecruised. Und bei "Charly", ein Hinterhof-Elektronik-Fritze, gabs das alles. Glück gehabt. Flash-Baustein ausgetauscht gegen EPROM. Diesen gebrannt. Ging!</p>
 <p>Nach Feierabend, nachdem ich meine Reports an Taiwan und Paderborn geschickt habe, konnte ich die spektakuläre Gegend erkunden. Mount Olympus, ein stets schneebedeckter Vulkan. Der Pazifik. Bill Gates riesiges Haus im Lake Washington. Malls erkunden. Gute Burger essen. Beklopptes Trinkgeld-System verstehen. Beklopptes Straßennetz verstehen. Verstehen, dass "Root Beer" kein Bier ist.</p>
